--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 <p>
             لدي خبرة قوية في تطوير الويب وتصميم الواجهات، وأعمل باستخدام مجموعة واسعة من الأدوات والتقنيات. أسعى دائماً لتطوير مهاراتي ومواكبة أحدث الاتجاهات في عالم البرمجة والتصميم.
           </p>
-          <a href="http://tech-code24.net/" class="btn">المزيد</a>
+          <a href="h#" class="btn">المزيد</a>
         </div>
       
         </div>
@@ -193,7 +193,7 @@
           </div>
         </div>
         <div class="title reveal">
-          <a href="http://tech-code24.net/" class="btn">عرض المزيد</a>
+          <a href="#" class="btn">عرض المزيد</a>
         </div>
       </div>
     </section>
@@ -293,3 +293,4 @@
 
   </body>
 </html>
+
