--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="menu-btn"></div>
       <div class="navigation">
         <a href="#main">الرئيسية</a>
-        <a href="#about">من أنا</a>
+        <a href="#about">نبذة عني</a>
         <a href="#skills">مهاراتي</a>
         <a href="#services">خدماتي</a>
         <a href="#work">أعمالي</a>
@@ -47,7 +47,7 @@
 
     <section class="about" id="about">
       <div class="title reveal">
-        <h2 class="section-title">من أنا</h2>
+        <h2 class="section-title">نبذة عني</h2>
       </div>
       <div class="content">
         <div class="column col-left reveal">
@@ -293,4 +293,5 @@
 
   </body>
 </html>
+
 
