--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="column col-right reveal">
           <h2 class="content-title"> يحيى إسماعيل يحيى عوضة</h2>
           <p class="paragraph-text">
-            أنا مصمم ومطور ويب متخصص في إنشاء مواقع احترافية، جذابة وسهلة الاستخدام. لدي خبرة واسعة في تصميم الواجهات وتجربة المستخدم، بالإضافة إلى تطوير المواقع باستخدام أحدث التقنيات.
+             مصمم ومطور ويب متخصص في إنشاء مواقع احترافية، جذابة وسهلة الاستخدام. لدي خبرة واسعة في تصميم الواجهات وتجربة المستخدم، بالإضافة إلى تطوير المواقع باستخدام أحدث التقنيات.
             <br><br>
             أعمل بشغف على تحويل الأفكار إلى مشاريع رقمية متكاملة، وأحرص دائماً على تقديم أفضل جودة ممكنة في كل عمل أقوم به. هدفي هو مساعدة العملاء على بناء حضور رقمي قوي وفعّال.
           </p>
@@ -293,5 +293,6 @@
 
   </body>
 </html>
+
 
 
